# nlptr-lib

./: .clang-format  .gitignore  404.html  Cargo.toml  ComPro.csproj  Makefile  README.md  book.toml  cptest.sh  go.mod  index.html  print.html  save_codes.py  searchindex.js  searchindex.json  set-up-wsl.html
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: verify.yml
CSharp/: 404.html  Algebra.html  Collections.html  DataStructures.html  Graphs.html  Misc.html  Strings.html  Trees.html  index.html  print.html  searchindex.js  searchindex.json  setup.html
CSharp/Algebra/: GCD.html  LinearSieve.html
CSharp/Collections/: HashMap.html  PriorityQueue.html  Set.html  SortedMap.html
CSharp/DataStructures/: FenwickTree.html  ModInt.html  RollbackUnionFind.html  UnionFind.html  WeightedUnionFind.html
CSharp/Graphs/: TopologicalSort.html
CSharp/Misc/: BinarySearch.html  Dbg.html  IStream.html  PopCount.html
CSharp/Strings/: RollingHash.html  ZAlgo.html
CSharp/Trees/: Rerooting.html
book_src/: 404.md
cpp/: 404.html  algebra.html  conv.html  data-structures.html  dp.html  geo.html  graphs.html  index.html  others.html  print.html  searchindex.js  searchindex.json  setup.html  strings.html  trees.html
docs/: set-up-wsl.md
docs/go/: setup.md
lib/: mdbook.py
rust/: 404.html  algebra.html  data_structures.html  graphs.html  index.html  others.html  print.html  searchindex.js  searchindex.json  setup.html  trees.html
src/: _Virtual.cs  _abc198.rs  _abc207.cpp  _abc247.py  _virtual.cpp  _virtual.py  _virtual.rs
theme/: custom.css
(+221 files in other folders)
