[package]
name = "nlptr-lib"
version = "0.1.0"
authors = ["nlptr <stdnlptr@gmail.com>"]
edition = "2018"
license = "CC0-1.0"

# https://github.com/rust-lang-ja/atcoder-rust-base/blob/ja-all-enabled/Cargo.toml
[dependencies]
itertools = "=0.9.0"
proconio = { version = "=0.3.6", features = ["derive"] }
rand = { version = "=0.7.3", features = ["small_rng"] }
rand_pcg = "=0.2.1"
regex = "=1.3.6"

[lib]
name = "lib"
path = "lib/rust/lib.rs"

[[bin]]
name = "ahc011"
path = "/home/miria/nlptr-lib/heuristics/ahc011/ahc011.rs"
